Commit new changes

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=
@@ -7,6 +8,7 @@
     <title>Spotify - Your Favorite Music is here</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <nav>
         <ul>
@@ -17,6 +19,132 @@
             <li>About</li>
         </ul>
     </nav>
+
+    <div class="container">
+        <div class="songlist">
+            <h1>Best of NCS - No Copyright Sounds</h1>
+            <div class="songItemContainer">
+                <div class="songItem">
+                    <img src="covers\1.jpg" alt="1">
+                    <span>Let Me Love You</span>
+                    <span class="sonListPlay">
+
+                        <span class="timeStamp">05.34
+                            <i class="fas  fa-circle-play"></i>
+                        </span>
+                    </span>
+                </div>
+                <div class="songItem">
+                    <img src="covers\2.jpg" alt="1">
+                    <span>Let Me Love You</span>
+                    <span class="sonListPlay">
+
+                        <span class="timeStamp">05.34
+                            <i class="fas  fa-circle-play"></i>
+                        </span>
+                    </span>
+                </div>
+                <div class="songItem">
+                    <img src="covers\3.jpg" alt="1">
+                    <span>Let Me Love You</span>
+                    <span class="sonListPlay">
+
+                        <span class="timeStamp">05.34
+                            <i class="fas  fa-circle-play"></i>
+                        </span>
+                    </span>
+                </div>
+                <div class="songItem">
+                    <img src="covers\4.jpg" alt="1">
+                    <span>Let Me Love You</span>
+                    <span class="sonListPlay">
+
+                        <span class="timeStamp">05.34
+                            <i class="fas  fa-circle-play"></i>
+                        </span>
+                    </span>
+                </div>
+                <div class="songItem">
+                    <img src="covers\5.jpg" alt="1">
+                    <span>Let Me Love You</span>
+                    <span class="sonListPlay">
+
+                        <span class="timeStamp">05.34
+                            <i class="fas  fa-circle-play"></i>
+                        </span>
+                    </span>
+                </div>
+                <div class="songItem">
+                    <img src="covers\6.jpg" alt="1">
+                    <span>Let Me Love You</span>
+                    <span class="sonListPlay">
+
+                        <span class="timeStamp">05.34
+                            <i class="fas  fa-circle-play"></i>
+                        </span>
+                    </span>
+                </div>
+                <div class="songItem">
+                    <img src="covers\7.jpg" alt="1">
+                    <span>Let Me Love You</span>
+                    <span class="sonListPlay">
+
+                        <span class="timeStamp">05.34
+                            <i class="fas  fa-circle-play"></i>
+                        </span>
+                    </span>
+                </div>
+                <div class="songItem">
+                    <img src="covers\8.jpg" alt="1">
+                    <span>Let Me Love You</span>
+                    <span class="sonListPlay">
+
+                        <span class="timeStamp">05.34
+                            <i class="fas  fa-circle-play"></i>
+                        </span>
+                    </span>
+                </div>
+                <div class="songItem">
+                    <img src="covers\9.jpg" alt="1">
+                    <span>Let Me Love You</span>
+                    <span class="sonListPlay">
+
+                        <span class="timeStamp">05.34
+                            <i class="fas  fa-circle-play"></i>
+                        </span>
+                    </span>
+                </div>
+                <div class="songItem">
+                    <img src="covers\10.jpg" alt="1">
+                    <span>Let Me Love You</span>
+                    <span class="sonListPlay">
+
+                        <span class="timeStamp">05.34
+                            <i class="fas  fa-circle-play"></i>
+                        </span>
+                    </span>
+                </div>
+            </div>
+        </div>
+        <div class="songbanner"> </div>
+    </div>
+
+    <div class="bottom">
+        <input type="range" name="range" id="myProgressBar" min="0" max="100">
+        <div class="icons">
+            <!-- fontawesome icons -->
+            <i class="fas fa-3x fa-backward-step"></i>
+            <i class="fas fa-3x fa-circle-play"></i>
+            <i class="fas fa-3x fa-forward-step"></i>
+        </div>
+        <div class="songInfo">
+            <img src="playing.gif" width ="42px" alt="">
+            Let Me Love You - Justin Beiber
+        </div>
+    </div>
+
+    <script src="https://kit.fontawesome.com/25037f5be4.js" crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </body>
+
 </html>
